# word_game

./: .dockerignore  .env.example  .gitignore  .hf_token_example  GEMINI.md  Makefile  README.md  precommit.sh  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml  prometheus.yml
docker/: docker-compose.yaml  embeddinggemma-cpu.Dockerfile  game.Dockerfile  harrier-cpu.Dockerfile  telegram-bot.Dockerfile
environment/: dev-reqirements.in  dev-reqirements.txt  embedding-model-requirements-cpu.in  embedding-model-requirements-cpu.txt  game-requirements.in  game-requirements.txt  linting-requirements.in  linting-requirements.txt  telegram-bot-requirements.in  telegram-bot-requirements.txt  test-requirements.in
scripts/: calculate_embeddings.py  extract_top2000.py  stamp_cache.py
src/: __init__.py
src/api/: run_embedding_gemma.py
src/data/: loader.py
src/embedding_service/: main.py  models.py
src/game/: api.py  exceptions.py  main.py  metrics.py  test_metrics.py  test_shuffle.py
src/game/static/: index.html
src/game/static/css/: style.css
src/game/static/js/: app.js  translations.js
src/models/: language_detector.py
src/shared/: embedding_client.py
src/telegram_bot/: __main__.py  message_manager.py
src/telegram_bot/locales/: messages.json
src/utils/: logger.py
tests/data/: test_loader.py
tests/embedding_service/: test_embedding_service_main.py
tests/game/: test_api.py  test_game_main.py  test_lives_integration.py  test_pvp.py
tests/models/: test_language_detector.py
tests/shared/: test_embedding_client.py
tests/telegram_bot/: test_message_manager.py  test_telegram_bot_main.py
tests/utils/: test_logger.py
