[project]
name = "DS_project"
version = "0.0.1"
description = "Data Science project template"
authors = [
  {name = "Mikhail S.", email = "fortis3000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-cov>=7.0.0",
    "python-json-logger==2.0.7",
]

[tool.ruff]
# Formatting
line-length = 120
exclude = [".pytest_cache", "**/__pycache__/", "**/*.ipynb_checkpoints/", "*.ipynb"]
[tool.ruff.lint]
extend-select = ["F", "I", "PL", "N"]
extend-ignore = ["D", "E501", "PLR0913", "E402", "C403","F405", "E203","E731", "E712"]
fixable = ["E", "F", "I"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.pytest.ini_options]
testpaths = [
    "tests/embedding_service",
    "tests/game",
    "tests/shared",
    "tests/telegram_bot",
    "tests/utils",
    "tests"
]

[tool.coverage.report]
omit = [
    "/tmp/*",
]
