[project]
name = "DS_project"
version = "0.0.1"
description = "Data Science project template"
authors = [
  {name = "Mikhail S.", email = "fortis3000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-json-logger==2.0.7",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
lint = [
    "ruff==0.14.2",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
]
telegram = [
    "python-telegram-bot>=22.5",
    "aiohttp>=3.13.2",
]
embedding = [
    "sentence-transformers>=5.1.2",
    'transformers @ git+https://github.com/huggingface/transformers@60b68e304cf4b6569b0660a13b558b929d4b0e77',
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
]
game = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
]
all = [
    "DS_project[lint,test,telegram,embedding,game]",
]

[tool.ruff]
line-length = 100
exclude = [".pytest_cache", "**/__pycache__/", "**/*.ipynb_checkpoints/", "*.ipynb"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["/src"]

[tool.coverage.run]
omit = ["/tmp/*"]

[tool.coverage.report]
ignore_errors = true
